--- a/src/app/components/layout/small-cart-viewer/small-cart-viewer.component.scss
+++ b/src/app/components/layout/small-cart-viewer/small-cart-viewer.component.scss
@@ -1,3 +1,5 @@
+@import "product";
+
 .bag,.likes{
     font-size: 15px;
 }
@@ -16,4 +18,12 @@
 /* Note: If you're using an SVG icon, you should make the class target the `<svg>` element */
 .white-icon svg {
     fill: white;
+}
+
+.forward{
+    &:hover{
+        cursor: pointer;
+    }
+    color: green;
+    text-decoration: none;
 }
