--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,4 +1,4 @@
-<div class="card flex-row ">
+<div class="card flex-row container">
   <div class="col align-content-center">
     <span *ngFor="let image of images" >
       <div class="thumbnail-container">
@@ -9,13 +9,12 @@
   <div class="col align-items-center">
   <img src={{big_image}}>
 </div>
-  <div class="info-box-big">
+  <div class="info-box-big container">
     <span class="category-big ">Originals</span>
-    <span class="title-big "><em>{{product$.title}}</em></span>
-    <span class="price-big ">{{product$.price}}$</span>
-    <p class="description-big">{{product$.description}}</p>
+    <app-product-title class="title-big" title="{{product.title}}"></app-product-title>
+    <app-product-price class="price-big" price="{{product.price}}"></app-product-price>
+    <app-product-description class="description-big" description="{{product.description}}"></app-product-description>
     <a (click)="addToCart()"> <i class="bag fas fa-shopping-bag"></i></a>
-
   </div>
 </div>
 
