Add uppercase to login error messages

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -9,7 +9,7 @@
       <div class="login-form">
 
         <span *ngIf="response && !response.success">
-          <mat-error class="col-12 validation error">{{response.errors}}</mat-error>
+          <mat-error class="col-12 validation error">{{response.errors|uppercase}}</mat-error>
         </span>
         <mat-form-field class="col-12">
           <input id="email" matInput type="email" placeholder="EMAIL ADDRESS *" formControlName="email" color="green">
