--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -16,7 +16,7 @@
 
         </mat-form-field>
         <span *ngIf="submited && loginForm.controls.email.invalid" class="">
-          <mat-error class="col-12 validation error">Please enter a valid e-mail address.</mat-error>
+          <mat-error class="col-12 validation error">PLEASE ENTER A VALID EMAIL ADDRESS</mat-error>
         </span>
 
 
@@ -25,18 +25,18 @@
         </mat-form-field>
         <span *ngIf="submited &&  loginForm.controls.password.invalid">
           <span *ngIf="loginForm.controls.password.errors.required">
-            <mat-error class="col-12 validation ">Please enter a password.</mat-error>
+            <mat-error class="col-12 validation ">PLEASE ENTER A PASSWORD</mat-error>
           </span>
           <span *ngIf="loginForm.controls.password.errors.minlength">
-            <mat-error class="col-12 validation error">Password is too short.</mat-error>
+            <mat-error class="col-12 validation error">PASSWORD IS TOO SHORT</mat-error>
           </span>
 
           <span *ngIf="loginForm.controls.password.errors.maxlength">
-            <mat-error class="col-12 validation error">Password is too long.</mat-error>
+            <mat-error class="col-12 validation error">PASSWORD IS TOO LONG</mat-error>
           </span>
         </span>
 
-        <button mat-raised-button class="col-12 text btn login-btn" type="submit" (click)="clicked()"><span>Log in
+        <button mat-raised-button class="col-12 text btn login-btn" type="submit" (click)="clicked()"><span>LOG IN
           </span>
           <mat-icon class="icon"> arrow_forward_ios</mat-icon>
         </button>
